--- a/api/package.json
+++ b/api/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
