--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,13 @@
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
     "pg": "^8.5.1",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
